packages/fuel-indexer-tests/tests/snapshots/integration_tests__commands__fuel_indexer_help_output.snap
---
source: packages/fuel-indexer-tests/tests/commands.rs
expression: output
---
Fuel Indexer service

USAGE:
    fuel-indexer <SUBCOMMAND>

OPTIONS:
    -h, --help       Print help information
    -V, --version    Print version information

SUBCOMMANDS:
    help    Print this message or the help of the given subcommand(s)
    run     Standalone binary for the Fuel indexer service
